this naming idea is way too cute to ignore

--- a/haskell/maryodel.cabal
+++ b/haskell/maryodel.cabal
@@ -13,8 +13,8 @@ extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     DrMario.Model,
-                       DrMario.Protocol.Raw
+  exposed-modules:     Dr.Mario.Model,
+                       Dr.Mario.Protocol.Raw
   other-extensions:    BinaryLiterals,
                        TypeFamilies,
                        MultiParamTypeClasses
