--- a/haskell/maryodel.cabal
+++ b/haskell/maryodel.cabal
@@ -14,15 +14,18 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     Dr.Mario.Model,
+                       Dr.Mario.Model.Internal,
                        Dr.Mario.Protocol.Raw
   other-extensions:    BinaryLiterals,
                        TypeFamilies,
                        MultiParamTypeClasses
   build-depends:       ansi-terminal >=0.7 && <0.8,
+                       attoparsec >=0.13 && <0.14,
                        base >=4.10 && <4.12,
                        bytestring >=0.10 && <0.11,
                        containers >=0.5 && <0.6,
                        data-default-class >=0.1 && <0.2,
+                       mtl >=2.2 && <2.3,
                        primitive >=0.6 && <0.7,
                        vector >=0.12 && <0.13
   default-language:    Haskell2010
