--- a/haskell/maryodel.cabal
+++ b/haskell/maryodel.cabal
@@ -25,7 +25,7 @@ library
                        base >=4.10 && <4.12,
                        bytestring >=0.10 && <0.11,
                        containers >=0.5 && <0.6,
-                       data-default-class >=0.1 && <0.2,
+                       data-default >=0.7 && <0.8,
                        mtl >=2.2 && <2.3,
                        primitive >=0.6 && <0.7,
                        stm >=2.4 && <2.5,
