--- a/haskell/maryodel.cabal
+++ b/haskell/maryodel.cabal
@@ -26,9 +26,13 @@ library
                        bytestring >=0.10 && <0.11,
                        containers >=0.5 && <0.6,
                        data-default >=0.7 && <0.8,
+                       directory >=1.3 && <1.4,
+                       filepath >=1.4 && <1.5,
                        mtl >=2.2 && <2.3,
                        primitive >=0.6 && <0.7,
+                       process >=1.6 && <1.7,
                        stm >=2.4 && <2.5,
+                       unix >=2.7 && <2.8,
                        vector >=0.12 && <0.13
   default-language:    Haskell2010
   ghc-options:         -fno-warn-tabs -funbox-strict-fields
