--- a/haskell/maryodel.cabal
+++ b/haskell/maryodel.cabal
@@ -32,6 +32,7 @@ library
                        primitive >=0.6 && <0.7,
                        process >=1.6 && <1.7,
                        stm >=2.4 && <2.5,
+                       transformers >=0.5 && <0.6,
                        unix >=2.7 && <2.8,
                        vector >=0.12 && <0.13
   default-language:    Haskell2010
