--- a/haskell/maryodel.cabal
+++ b/haskell/maryodel.cabal
@@ -42,3 +42,14 @@ library
                        vector >=0.12 && <0.13
   default-language:    Haskell2010
   ghc-options:         -fno-warn-tabs -funbox-strict-fields
+
+executable maryodel-debugging-client
+  build-depends:       base >=4.10 && <4.12,
+                       brick >=0.41 && <0.42,
+                       maryodel,
+                       process >=1.6 && <1.7,
+                       vty >=5.24 && <5.25
+  default-language:    Haskell2010
+  hs-source-dirs:      bin
+  main-is:             maryodel-debugging-client.hs
+  ghc-options:         -fno-warn-tabs -threaded
