--- a/haskell/maryodel.cabal
+++ b/haskell/maryodel.cabal
@@ -46,6 +46,7 @@ library
 executable maryodel-debugging-client
   build-depends:       base >=4.10 && <4.12,
                        brick >=0.41 && <0.42,
+                       containers >=0.5 && <0.6,
                        maryodel,
                        process >=1.6 && <1.7,
                        vty >=5.24 && <5.25
