--- a/haskell/maryodel.cabal
+++ b/haskell/maryodel.cabal
@@ -33,6 +33,7 @@ library
                        data-default >=0.7 && <0.8,
                        directory >=1.3 && <1.4,
                        filepath >=1.4 && <1.5,
+                       hashable >=1.3 && <1.4,
                        mtl >=2.2 && <2.3,
                        primitive >=0.6 && <0.7,
                        process >=1.6.3 && <1.7,
