--- a/haskell/maryodel.cabal
+++ b/haskell/maryodel.cabal
@@ -43,6 +43,8 @@ library
                        vector >=0.12 && <0.13
   default-language:    Haskell2010
   ghc-options:         -fno-warn-tabs -funbox-strict-fields
+  -- this hs-source-dirs is not needed for cabal, but makes cabtags' job easier
+  hs-source-dirs:      .
 
 executable maryodel-debugging-client
   build-depends:       base >=4.10 && <4.13,
