--- a/haskell/maryodel.cabal
+++ b/haskell/maryodel.cabal
@@ -16,7 +16,8 @@ library
   exposed-modules:     Dr.Mario.Model,
                        Dr.Mario.Model.Internal,
                        Dr.Mario.Protocol.Client,
-                       Dr.Mario.Protocol.Raw
+                       Dr.Mario.Protocol.Raw,
+                       Dr.Mario.Util
   other-extensions:    BinaryLiterals,
                        DeriveFunctor,
                        FlexibleInstances,
@@ -35,10 +36,10 @@ library
                        filepath >=1.4 && <1.5,
                        hashable >=1.3 && <1.4,
                        mtl >=2.2 && <2.3,
-                       primitive >=0.6 && <0.7,
+                       primitive >=0.7 && <0.8,
                        process >=1.6.3 && <1.7,
                        stm >=2.4 && <2.6,
-                       transformers >=0.5 && <0.6,
+                       transformers >=0.5.6 && <0.6,
                        unix >=2.7 && <2.8,
                        vector >=0.12 && <0.13
   default-language:    Haskell2010
