--- a/haskell/maryodel.cabal
+++ b/haskell/maryodel.cabal
@@ -15,6 +15,7 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Dr.Mario.Model,
                        Dr.Mario.Model.Internal,
+                       Dr.Mario.Pathfinding,
                        Dr.Mario.Protocol.Client,
                        Dr.Mario.Protocol.Raw,
                        Dr.Mario.Util
@@ -35,14 +36,16 @@ library
                        directory >=1.3 && <1.4,
                        filepath >=1.4 && <1.5,
                        hashable >=1.2 && <1.5,
+                       monad-loops >=0.4 && <0.5,
                        mtl >=2.2 && <2.4,
                        primitive >=0.7 && <0.8,
                        process >=1.6.3 && <1.7,
                        stm >=2.4 && <2.6,
                        transformers >=0.5.6 && <0.7,
                        unix >=2.7 && <2.8,
+                       unordered-containers >=0.2 && <0.3,
                        vector >=0.12 && <0.14
   default-language:    Haskell2010
-  ghc-options:         -fno-warn-tabs -funbox-strict-fields
+  ghc-options:         -fno-warn-tabs -funbox-strict-fields -O2
   -- this hs-source-dirs is not needed for cabal, but makes cabtags' job easier
   hs-source-dirs:      .
