--- a/haskell/maryodel.cabal
+++ b/haskell/maryodel.cabal
@@ -27,8 +27,9 @@ library
                        ScopedTypeVariables,
                        TypeFamilies,
                        ViewPatterns
-  build-depends:       ansi-terminal >=0.7 && <0.12,
-                       attoparsec >=0.13 && <0.14,
+  build-depends:       aeson >=0.11 && <2.2,
+                       ansi-terminal >=0.7 && <0.12,
+                       attoparsec >=0.13 && <0.15,
                        base >=4.10 && <4.15,
                        bytestring >=0.10 && <0.11,
                        containers >=0.5 && <0.7,
