begin work on better pathfinding

--- a/haskell/maryodel.cabal
+++ b/haskell/maryodel.cabal
@@ -23,7 +23,9 @@ library
                        DeriveFunctor,
                        FlexibleInstances,
                        TypeFamilies,
+                       LambdaCase,
                        MultiParamTypeClasses,
+                       PatternSynonyms,
                        ScopedTypeVariables,
                        TypeFamilies,
                        ViewPatterns
