a bunch of random stuff

--- a/haskell/maryodel.cabal
+++ b/haskell/maryodel.cabal
@@ -21,6 +21,7 @@ library
                        Dr.Mario.Util
   other-extensions:    BinaryLiterals,
                        DeriveFunctor,
+                       DeriveGeneric,
                        FlexibleInstances,
                        TypeFamilies,
                        LambdaCase,
