--- a/haskell/maryodel.cabal
+++ b/haskell/maryodel.cabal
@@ -45,6 +45,7 @@ library
                        primitive >=0.7 && <0.8,
                        process >=1.6.3 && <1.7,
                        stm >=2.4 && <2.6,
+                       text >=1.2 && <1.3,
                        transformers >=0.5.6 && <0.7,
                        unix >=2.7 && <2.8,
                        unordered-containers >=0.2 && <0.3,
